# thunder

./: .gitignore  LICENSE  README.md  lint-requirements.txt  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  versions.json
.github/workflows/: check-version.yaml  docs.yml  lint.yml  release.yml  test-release.yml  tests.yaml
0.0.0/inference/: index.html
0.0.1/configs/: index.html
0.0.1/examples/: index.html
0.0.1/layout/: index.html
0.0.1/policy/: index.html
0.0.1/utils/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/callbacks/: index.html
0.1.0/cli/: index.html
0.1.0/configs/: index.html
0.1.0/examples/: index.html
0.1.0/inference/: index.html
0.1.0/layout/: index.html
0.1.0/loggers/: index.html
0.1.0/policy/: index.html
0.1.0/search/: search_index.json
0.1.0/utils/: index.html
0.1.1/: sitemap.xml
0.1.1/callbacks/: index.html
0.1.1/cli/: index.html
0.1.1/examples/: index.html
0.1.1/layout/: index.html
0.1.1/policy/: index.html
0.1.1/utils/: index.html
dev/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
dev/callbacks/: index.html
dev/cli/: index.html
dev/configs/: index.html
dev/examples/: index.html
dev/inference/: index.html
dev/layout/: index.html
dev/loggers/: index.html
dev/policy/: index.html
dev/predict/: index.html
dev/search/: search_index.json
dev/utils/: index.html
docs/: index.md  utils.md
docs/callbacks/: fail_on_interrupt.md  index.md  metric_logger.md  metric_monitor.md  seed_everything.md  time_profiler.md
docs/cli/: index.md
docs/configs/: index.md
docs/core/: thunder_module.md
docs/examples/: index.md  mnist.md  totalsegm_lowres.md
docs/inference/: index.md
docs/layout/: fixed.md  index.md  splits.md
docs/loggers/: index.md  wandb.md
docs/policy/: index.md  lr_schedulers.md
latest/callbacks/: index.html
latest/cli/: index.html
latest/configs/: index.html
latest/inference/: index.html
latest/layout/: index.html
latest/loggers/: index.html
latest/policy/: index.html
latest/utils/: index.html
tests/: conftest.py  dev-requirements.txt  test_backend.py  test_cli.py  test_layout.py
tests/assets/: dumb.config
tests/callbacks/: test_fail_in_interrupt.py  test_inference_runner.py  test_metric_logger.py  (+3 more)
thunder/: __init__.py  backend.py  callbacks.py  cli.py  layout.py  placeholders.py  policy.py  predict.py  pydantic_compat.py  thunder.py  utils.py
(+84 files in other folders)
