[project]
name = 'thunder'
dynamic = ['version', 'dependencies']
description = 'A small experiments runner for Pytorch Lightning'
readme = 'README.md'
requires-python = '>=3.10'
license = { file = 'LICENSE' }
keywords = ['deep learning', 'experiments']
authors = [
    { name = 'NeuroML Group', email = 'max@ira-labs.com' },
    { name = 'Arseni Bialkou', email = 'arsfizteh@gmail.com' }
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
'Homepage' = 'https://github.com/neuro-ml/thunder'
'Issues' = 'https://github.com/neuro-ml/thunder/issues'
'Source' = 'https://github.com/neuro-ml/thunder'

[project.scripts]
thunder = 'thunder.cli.entrypoint:main'

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['thunder', 'thunder.*']
exclude = ['tests']

[tool.setuptools.dynamic]
version = { attr = 'thunder.__version__.__version__' }
dependencies = { file = 'requirements.txt' }

[tool.coverage.run]
branch = true
source = ['thunder/']

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true

[tool.flake8]
# W503: line break before binary operator is actually considered best-practice
# E203: spaces around complex variables in slices are pep-right
# F401: unused imports in __init__.py-s
# F403: start imports in __init__.py-s
# I251: allow absolute imports in upper files
# B019: @lru_cache for static methods is fine
# B008: calling the function as default value is just part of the typer's interface
# C408: for identifier-like fields dict(x=y) is just more concise
# Q000,Q001: we don't care for single vs double quotes
ignore = ['W503', 'E203', 'B019', 'B028', 'C408', 'Q000', 'Q001']
per-file-ignores = [
    '**/__init__.py:F401,F403',
    'tests/*:I251',
    'docs/*:I251',
    'thunder/internals/cli.py:B008',
]
max-line-length = 120
banned-modules = 'thunder.* = Use relative imports'
